@@ -3,21 +3,20 @@ package dev.efnilite.neoschematic.test;
 import com.google.gson.Gson;
 import org.bukkit.Bukkit;
 import org.bukkit.plugin.java.JavaPlugin;
-import org.junit.platform.launcher.core.LauncherDiscoveryRequestBuilder;
-import org.junit.platform.launcher.core.LauncherFactory;
-import org.junit.platform.launcher.listeners.SummaryGeneratingListener;
+import org.junit.runner.JUnitCore;
+import org.junit.runner.Result;
 
 import java.io.BufferedWriter;
+import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
+import java.nio.file.Path;
+import java.util.*;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
 import java.util.stream.Collectors;
-
-import static org.junit.platform.engine.discovery.ClassNameFilter.includeClassNamePatterns;
-import static org.junit.platform.engine.discovery.DiscoverySelectors.selectPackage;
 
 public class TestPlugin extends JavaPlugin {
 
@@ -25,35 +24,30 @@ public class TestPlugin extends JavaPlugin {
     public void onEnable() {
         getLogger().info("Starting tests...");
 
-        var listener = new SummaryGeneratingListener();
-        var request = LauncherDiscoveryRequestBuilder.request()
-                .selectors(selectPackage("dev.efnilite.neoschematic.test"))
-                .filters(includeClassNamePatterns(".*Test"))
-                .build();
-        var launcher = LauncherFactory.create();
-        launcher.discover(request);
-        launcher.registerTestExecutionListeners(listener);
-        launcher.execute(request);
+        Result result;
+        try {
+            result = JUnitCore.runClasses(getClasses());
+        } catch (IOException ex) {
+            throw new RuntimeException(ex);
+        }
 
-        var summary = listener.getSummary();
-
-        var failed = summary.getFailures().stream()
+        var failed = result.getFailures().stream()
                 .map(failure ->
-                        Map.entry(failure.getTestIdentifier().getDisplayName(),
+                        Map.entry(failure.getMessage(),
                                 Arrays.stream(failure.getException().getStackTrace())
                                         .map(StackTraceElement::toString)
                                         .toList()))
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
         var results = new TestResults(
-                summary.getTestsStartedCount(),
-                summary.getTestsSucceededCount(),
-                summary.getTestsFailedCount(),
+                result.getRunCount(),
+                result.getRunCount() - result.getFailureCount(),
+                result.getFailureCount(),
                 List.of(),
                 failed
         );
 
-        try (BufferedWriter writer = Files.newBufferedWriter(Paths.get("test-results.json"))) {
+        try (BufferedWriter writer = Files.newBufferedWriter(Path.of("test-results.json"))) {
             new Gson().toJson(results, writer);
         } catch (IOException ex) {
             throw new RuntimeException(ex);
@@ -67,5 +61,52 @@ public class TestPlugin extends JavaPlugin {
         getLogger().info("Shutting down server...");
 
         Bukkit.shutdown();
+    }
+
+
+    private Class<?>[] getClasses() throws IOException {
+        JarFile jar = new JarFile(getJarFile());
+
+        String basePackage = "dev/efnilite/neoschematic/test/";
+        List<Class<?>> classes = new ArrayList<>();
+
+        try {
+            List<String> classNames = new ArrayList<>();
+
+            for (Iterator<JarEntry> it = jar.entries().asIterator(); it.hasNext(); ) {
+                JarEntry e = it.next();
+
+                if (e.getName().startsWith(basePackage) && e.getName().endsWith("Test.class")) {
+                    classNames.add(e.getName().replace('/', '.')
+                            .substring(0, e.getName().length() - ".class".length()));
+                }
+            }
+
+            classNames.sort(String::compareToIgnoreCase);
+
+            for (String className : classNames) {
+                try {
+                    classes.add(Class.forName(className, true, this.getClass().getClassLoader()));
+                } catch (ClassNotFoundException ex) {
+                    throw new RuntimeException(ex);
+                }
+            }
+        } finally {
+            try {
+                jar.close();
+            } catch (IOException ignored) {
+            }
+        }
+        return classes.toArray(new Class<?>[0]);
+    }
+
+    private File getJarFile() {
+        try {
+            Method getFile = JavaPlugin.class.getDeclaredMethod("getFile");
+            getFile.setAccessible(true);
+            return (File) getFile.invoke(this);
+        } catch (InvocationTargetException | IllegalAccessException | NoSuchMethodException ex) {
+            throw new RuntimeException(ex);
+        }
     }
 }
